tests/paczka1/fuzzy1/37374167.err
Error in line 2: 3UfIiRIMi A234 36,4
Error in line 1: q51Kofy A378 84,3
Error in line 5: q51Kofy S773 36,6
Error in line 8: 8Zcqs9zk A378 9,4
Error in line 28: A234 A910 10,0
Error in line 31: divBo A910 48,6
